@@ -7,7 +7,7 @@
 plotReducedDim(object, use_dimred, ncomponents = 2, percentVar = NULL,
   colour_by = NULL, shape_by = NULL, size_by = NULL,
   by_exprs_values = "logcounts", by_show_single = FALSE, ...,
-  add_ticks = TRUE)
+  add_ticks = NULL)
 }
 \arguments{
 \item{object}{A SingleCellExperiment object.}
@@ -33,7 +33,7 @@ for use in point aesthetics - see \code{?"\link{scater-vis-var}"} for details.}
 
 \item{...}{Additional arguments for visualization, see \code{?"\link{scater-plot-args}"} for details.}
 
-\item{add_ticks}{Logical scalar indicating whether ticks should be drawn on the axes corresponding to the location of each point.}
+\item{add_ticks}{Deprecated; logical scalar indicating whether ticks should be drawn on the axes corresponding to the location of each point.}
 }
 \value{
 A ggplot object
